# phantom-miner

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml
.github/workflows/: build.yml  release.yml
include/c2/: telegram_bot.h  web_panel.h
include/gpu/: cuda_miner.h  gpu_miner.h
include/miner/: job.h  miner.h  randomx_engine.h  stats.h
include/network/: pool_balancer.h  pool_client.h  remote_config.h  tor_handler.h
include/stealth/: defender_bypass.h  environment_detector.h  process_hider.h  watchdog.h
include/utils/: config.h  crypto.h  logger.h
scripts/: build.sh  build_windows.bat  install_deps.sh
src/: main.cpp
src/c2/: telegram_bot.cpp  web_panel.cpp
src/gpu/: cuda_miner.cu  gpu_miner.cpp
src/miner/: miner.cpp  randomx_engine.cpp  stats.cpp
src/network/: pool_balancer.cpp  pool_client.cpp  remote_config.cpp  tor_handler.cpp
src/stealth/: defender_bypass.cpp  environment_detector.cpp  process_hider.cpp  watchdog.cpp
src/utils/: config.cpp  crypto.cpp  logger.cpp
tests/: test_optimizations.cpp
